@@ -16,6 +16,10 @@
 #' @param retryFits Number of times to attempt to achieve convergence and valid (i.e., not NaN) variance estimates after the initial model fit. \code{retryFits} differs
 #' from \code{attempts} because \code{retryFits} iteratively uses random perturbations of the current parameter estimates as the initial values for likelihood optimization, while 
 #' \code{attempts} uses the same initial values (\code{theta}) for each attempt. 
+#' @param retrySD An optional list of scalars or vectors for each individual indicating the standard deviation to use for normal perturbations of \code{theta} when \code{retryFits>0}. 
+#' Instead of a list object, \code{retrySD} can also be a scalar or a vector, in which case the same values are used for each each individual.
+#' If a scalar is provided, then the same value is used for each parameter. If a vector is provided, it must be of length \code{length(theta)} for the corresponding individual(s). Default: 1, i.e., a standard deviation of 1 is used
+#' for all parameters of all individuals. Ignored unless \code{retryFits>0}.
 #' @param mov.model List of mov.model objects (see \code{\link[crawl]{crwMLE}}) containing an element for each individual. If only one movement model is provided, then the same movement model is used
 #' for each individual.
 #' @param err.model List of err.model objects (see \code{\link[crawl]{crwMLE}}) containing an element for each individual. If only one error model is provided, then the same error model is used
@@ -101,7 +105,7 @@
 #' @importFrom sp coordinates
 #' @importFrom utils capture.output
 
-crawlWrap<-function(obsData, timeStep=1, ncores = 1, retryFits = 0,
+crawlWrap<-function(obsData, timeStep=1, ncores = 1, retryFits = 0, retrySD = 1,
                     mov.model = ~1, err.model = NULL, activity = NULL, drift = NULL, 
                     coord = c("x", "y"), Time.name = "time", initial.state, theta, fixPar, 
                     method = "L-BFGS-B", control = NULL, constr = NULL, 
@@ -255,6 +259,42 @@ crawlWrap<-function(obsData, timeStep=1, ncores = 1, retryFits = 0,
     }     
   }
   
+  if(retryFits>0){
+    if(!is.list(retrySD)){
+      tmpretrySD <- retrySD
+      retrySD<-list()
+      for(i in ids){
+        if(length(tmpretrySD)>1){
+          if(length(theta[[i]])!=length(tmpretrySD)) stop("retrySD is not the correct length for individual ",i)
+          retrySD[[i]] <- tmpretrySD
+        } else {
+          retrySD[[i]] <- rep(tmpretrySD,length(theta[[i]]))
+        }
+      }
+    } else {
+      if(!is.null(names(retrySD))) {
+        if(!all(names(retrySD) %in% ids)) stop("retrySD names must match obsData$ID")
+        retrySD <- retrySD[ids]
+      } else {
+        if(length(retrySD)!=length(ids)) stop('when no list object names are provided, retrySD must be a list of length ',length(ids))
+        names(retrySD) <- ids
+      }
+      for(i in ids){
+        if(is.null(retrySD[[i]])){
+          retrySD[[i]] <- rep(1,length(theta[[i]]))
+        } else {
+          tmpretrySD <- retrySD[[i]]
+          if(length(tmpretrySD)>1){
+            if(length(theta[[i]])!=length(tmpretrySD)) stop("retrySD is not the correct length for individual ",i)
+          } else {
+            retrySD[[i]] <- rep(tmpretrySD,length(theta[[i]]))
+          }
+        }
+      }
+    }
+    retrySD <- retrySD[ids]
+  }
+  
   if(is.null(constr)){
     constr<-list()
     for(i in ids){
@@ -373,14 +413,14 @@ crawlWrap<-function(obsData, timeStep=1, ncores = 1, retryFits = 0,
               coord = coord,
               Time.name = Time.name,
               initial.state = initial.state[[i]],
-              theta = fit$estPar + rnorm(length(fit$estPar),0,0.5),
+              theta = fit$estPar + rnorm(length(fit$estPar),0,retrySD[[i]]),
               fixPar = fixPar[[i]],
               method = method,
-              control = list(maxit = control$maxit),
+              control = control,
               constr = constr[[i]],
               prior = prior[[i]],
               need.hess = need.hess,
-              initialSANN = list(maxit = initialSANN$maxit),
+              initialSANN = initialSANN,
               attempts = 1
             ))),error=function(e) e)
             if(inherits(tmp,"crwFit")){
