@@ -1,4 +1,9 @@
-momentuHMM 1.4.2 2018-06-04
+momentuHMM 1.4.2 2018-06-06
+-----------------
+NEW FEATURES
+
+* retrySD argument added to crawlWrap for additional flexibility when exploring the likelihood surface using retryFits
+
 -----------------
 CHANGES
 
@@ -7,6 +12,8 @@ CHANGES
 * strength argument in 'angleFormula' special function is now optional
 
 * when theta and/or fixPar arguments are missing in crawlWrap, crawl::crwMLE default values are now used
+
+* bug fix in crawlWrap when retryFits>0 and control argument is NULL. This bug caused additional model fitting attempts to fail.
 
 
 momentuHMM 1.4.1 2018-05-21
